Use backbone to fetch and display promoted posts on front; Add mini-loading animation when posts are not loaded yet; Fix date format as sent by backend; Slightly arrange navbar look&feel; Slightly arrange #simplicity look&feel

--- a/www/app/Resources/views/default/index.html.twig
+++ b/www/app/Resources/views/default/index.html.twig
@@ -25,79 +25,8 @@
             <div class="lead">Quality focused small posts about PHP projects (Symfony, Drupal) and web development best
                 practices in general.
             </div>
-            <div class="row">
-                <div class="col-md-6 col-lg-4">
-                    <article class="post">
-                        <div class="meta">
-                            <time datetime="2015-09-24">2015-09-24</time>
-                        </div>
-
-                        <div class="img-container">
-                            <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
-                        </div>
-
-                        <div class="copy-container">
-                            <div class="copy">
-                                <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
-
-                                <div class="excerpt">
-                                    Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor.
-                                    Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped
-                                    modis volor.
-                                </div>
-                            </div>
-                        </div>
-                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-                    </article>
-                </div>
-                <div class="col-md-6 col-lg-4">
-                    <article class="post">
-                        <div class="meta">
-                            <time datetime="2015-09-24">2015-09-24</time>
-                        </div>
-
-                        <div class="img-container">
-                            <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
-                        </div>
-
-                        <div class="copy-container">
-                            <div class="copy">
-                                <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
-
-                                <div class="excerpt">
-                                    Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor.
-                                    Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped
-                                    modis volor.
-                                </div>
-                            </div>
-                        </div>
-                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-                    </article>
-                </div>
-                <div class="col-md-6 col-lg-4 hidden-md">
-                    <article class="post">
-                        <div class="meta">
-                            <time datetime="2015-09-24">2015-09-24</time>
-                        </div>
-
-                        <div class="img-container">
-                            <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#"></a>
-                        </div>
-
-                        <div class="copy-container">
-                            <div class="copy">
-                                <h2><a href="#!/post/1">Entertaining Customers with MoviePass</a></h2>
-
-                                <div class="excerpt">
-                                    Magnis modipsae que lib voloratati andigen daepeditem quiate es reporemus aut labor.
-                                    Laceaque quiae sitiorem rest non restibusaes dem tumquam core posae volor remped
-                                    modis volor.
-                                </div>
-                            </div>
-                        </div>
-                        <a class="link" href="#!/post/1">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-                    </article>
-                </div>
+            <div id="post-promoted" class="row">
+                <div class="loader"></div>
             </div>
             <p class="text-center">
                 <a class="btn btn-primary" href="#!/posts">See all posts</a>
@@ -189,10 +118,14 @@
 
     <section class="slide" id="simplicity">
         <div class="container">
-            <blockquote>
-                <p>Nature is pleased with simplicity. And nature is no dummy</p>
-                <footer>Isaac Newton</footer>
-            </blockquote>
+            <div class="row">
+                <div class="col-xs-12 col-md-6 col-md-offset-3">
+                    <blockquote>
+                        <p>Nature is pleased with simplicity. And nature is no dummy.</p>
+                        <footer>Isaac Newton</footer>
+                    </blockquote>
+                </div>
+            </div>
         </div>
     </section>
 
