--- a/www/web/scss/pages/_home_simplicity.scss
+++ b/www/web/scss/pages/_home_simplicity.scss
@@ -1,3 +1,15 @@
 #simplicity {
   background-color: #FFFFFF;
+
+  blockquote {
+    border: none;
+    text-align: center;
+    margin: 0;
+
+    footer {
+      background-color: transparent;
+      text-align: right;
+      margin-top: 20px;
+    }
+  }
 }
