--- a/www/app/Resources/views/js_template/post_list.html.twig
+++ b/www/app/Resources/views/js_template/post_list.html.twig
@@ -1,24 +1,14 @@
-<script name="post-list" type="text/template">
-    <div class="col-md-6 col-lg-4">
-        <article class="post">
-            <div class="meta">
-                <time datetime="<%= _.template.formatDateRFC3339(publishedAt) %>"><%= _.template.formatDateShort(publishedAt) %></time>
-            </div>
+{% extends 'js_template/template_base.html.twig' %}
 
-            <div class="img-container">
-                <a class="img" style="background-image:url(http://placehold.it/400x200);" href="#/posts/<%= slug %>"></a>
-            </div>
+{% block template_name %}post-list{% endblock %}
 
-            <div class="copy-container">
-                <div class="copy">
-                    <h2><a href="#/posts/<%= slug %>">List</a></h2>
-
-                    <div class="excerpt">
-                        <%= summary %>
-                    </div>
-                </div>
-            </div>
-            <a class="link" href="#/posts/<%= slug %>">Read more <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></a>
-        </article>
+{% block template_body %}
+    <div class="container">
+    List
+    <a href="#/">Home</a>
+    <a href="#/posts">Posts</a>
+    <a href="#/posts/composer">Composer</a>
+    <a href="#/posts/comment-driven-development">CDD</a>
+    <a href="#/posts/respect-function-signatures">Functions</a>
     </div>
-</script>
+{% endblock %}
