--- a/www/web/scss/_global.scss
+++ b/www/web/scss/_global.scss
@@ -7,9 +7,11 @@ html{
 
 body {
   position: relative;
+  width: 100%;
   font-size: 14px/1.625;
   font-family: "Raleway","Helvetica Neue",sans-serif;
   color: #828B90;
+  overflow: auto;
 }
 
 a {
