--- a/www/web/scss/styles.scss
+++ b/www/web/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "components/footer";
 
 /* Pages */
+@import "pages/page";
 @import "pages/home";
 @import "pages/home_about";
 @import "pages/home_blog";
