Backbone WIP: add page loader, setup teaser template

--- a/www/app/Resources/views/base.html.twig
+++ b/www/app/Resources/views/base.html.twig
@@ -24,6 +24,7 @@
 
 {% include 'partial/footer.html.twig' %}
 
+<div id="page-loader"><div class="loader"></div></div>
 
 {% block javascripts_templates %}
     <!-- Templates -->
