--- a/www/app/Resources/views/partial/navbar.html.twig
+++ b/www/app/Resources/views/partial/navbar.html.twig
@@ -7,23 +7,23 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#hero">
+            <a class="navbar-brand page-scroll" href="{{ path('homepage') }}#hero">
                 <img src="logo.png" class="img-responsive" alt="Wanjee">
             </a>
         </div>
         <div class="collapse navbar-collapse" id="navigation-main">
             <ul class="nav navbar-nav navbar-right">
                 <li class="hidden active">
-                    <a class="page-scroll" href="#hero"></a>
+                    <a class="page-scroll" href="{{ path('homepage') }}#hero"></a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#blog">Blog</a>
+                    <a class="page-scroll" href="{{ path('homepage') }}#blog">Blog</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#about">About</a>
+                    <a class="page-scroll" href="{{ path('homepage') }}#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#shuwee">Shuwee</a>
+                    <a class="page-scroll" href="{{ path('homepage') }}#shuwee">Shuwee</a>
                 </li>
             </ul>
         </div>
