--- a/www/web/scss/_global.scss
+++ b/www/web/scss/_global.scss
@@ -14,6 +14,19 @@ body {
   overflow: auto;
 }
 
+section {
+  &.slide {
+    width: 100%;
+    max-width: none;
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+}
+
+.page {
+  padding-top: 70px;
+}
+
 a {
   color: #828B90;
   transition: all 0.2s ease-in-out 0s;
@@ -97,25 +110,4 @@ a {
       }
     }
   }
-}
-
-
-/* Utils */
-.center {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.vcenter {
-  position: relative;
-  top: 50%;
-  transform: translate(0, -50%);
-}
-
-.hcenter {
-  position: relative;
-  left: 50%;
-  transform: translate(-50%, 0);
 }
