--- a/www/web/scss/pages/_home.scss
+++ b/www/web/scss/pages/_home.scss
@@ -1,8 +1,7 @@
-section {
-  &.slide {
-    width: 100%;
-    max-width: none;
-    padding-top: 80px;
-    padding-bottom: 80px;
+body {
+  &.home {
+    .page {
+      padding-top: 0;
+    }
   }
 }
