--- a/www/web/scss/styles.scss
+++ b/www/web/scss/styles.scss
@@ -19,3 +19,5 @@
 @import "pages/home_hero";
 @import "pages/home_simplicity";
 @import "pages/home_shuwee";
+@import "pages/post_details";
+@import "pages/post_list";
