--- a/www/web/scss/styles.scss
+++ b/www/web/scss/styles.scss
@@ -7,6 +7,7 @@
 @import "icomoon";
 
 /* Components */
+@import "components/block";
 @import "components/loader";
 @import "components/nav";
 @import "components/social";
